# keywitness

./: .gitignore  README.md
.claude/: launch.json
.github/workflows/: deploy-web.yml
appstore/: metadata.txt
appstore/screenshots/: README.txt
docs/: STANDARDS_MIGRATION_PLAN.md
fruitjam/: README.md  adafruit_fingerprint.mpy  code.py  ed25519.py  enroll.py  fingerprint.py  gcm.py  settings.toml  sha512.py
fruitjam/sim/: README.md  aesio.py  run_sim.py  sim_hardware.py
hardware/: SPEC.md
hardware/firmware/: CMakeLists.txt  crypto.c  crypto.h  main.c
ios/KeyWitness/: ExportOptions.plist
ios/KeyWitness/KeyWitness/: AppAttestManager.swift  AppDelegate.swift  Info.plist  KeyWitness.entitlements  LaunchScreen.storyboard  LearnMoreViewController.swift  MainViewController.swift  OnboardingViewController.swift
ios/KeyWitness/KeyWitness.xcodeproj/: project.pbxproj
ios/KeyWitness/KeyWitness.xcodeproj/xcshareddata/xcschemes/: KeyWitness.xcscheme
ios/KeyWitness/KeyWitness/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/KeyWitness/KeyWitness/Assets.xcassets/LaunchBackground.colorset/: Contents.json
ios/KeyWitness/KeyWitness/BLE/: BLEAttestationFlow.swift  BLEConstants.swift  BLEPeripheralManager.swift  BLETypes.swift
ios/KeyWitness/KeyWitness/Photo/: PhotoCaptureSession.swift  PhotoCaptureViewController.swift  PhotoTypes.swift  PhotoVCBuilder.swift
ios/KeyWitness/KeyWitness/Voice/: AudioMeshCorrelator.swift  VoiceRecordingSession.swift  VoiceRecordingViewController.swift  VoiceTypes.swift  VoiceVCBuilder.swift
ios/KeyWitness/KeyWitnessWidgets/: KeyWitnessLiveActivity.swift  KeyWitnessWidgetBundle.swift
ios/KeyWitness/Keyboard/: AppAttestHelper.swift  AttestationBuilder.swift  CryptoEngine.swift  DIDKey.swift  EmojiKey.swift  Info.plist  JCS.swift  KeyWitnessKeyboard.swift  VCBuilder.swift
ios/KeyWitness/Shared/: KeyWitnessActivity.swift
shared/: attestation.ts  package-lock.json  package.json  protocol-v3.md  protocol.md
teensy/: README.md
teensy/KeyWitnessForward/: KeyWitnessForward.ino  attestation_v1.cpp  attestation_v1.h  signing_key.h.example
teensy/KeyboardForward/: KeyboardForward.ino
teensy/esp32_bridge/: esp32_bridge.ino  wifi_secrets.h.example
teensy/test/: package-lock.json  package.json  run_tests.mjs  run_tests_v2.mjs  test_main.c
web/: index.html  package-lock.json  package.json  server.ts  vite.config.embed.ts  vite.config.ts
web/convex/: appAttest.ts  attestations.ts  convex.config.ts  http.ts  keys.ts  schema.ts  selfHosting.ts  trust.ts  usernames.ts
web/convex/_generated/: api.d.ts
web/convex/lib/: didkey.ts  vc.ts  verify.ts
web/public/: embed-docs.html  ns-v1.json
web/public/.well-known/: keywitness-providers.json
web/src/: App.tsx  index.html  main.ts  main.tsx  style.css  verify.ts
web/src/components/: Nav.tsx  ScrollReveal.tsx  UpdateBanner.tsx
web/src/embed/: ble.ts  sdk.ts
web/src/lib/: appAttest.ts  didkey.ts  stegkey.ts  vc.ts  verify.ts
web/src/pages/: BLEDemo.tsx  Developers.tsx  HowItWorks.tsx  Landing.tsx  Manifesto.tsx  Privacy.tsx  Support.tsx  Verify.tsx
(+3 files in other folders)
